# distributed-systems-labs

lab1/task1/: JavaUdpClient.java  JavaUdpServer.java
lab1/task2/client/: PythonUdpClient.py
lab1/task2/server/: JavaUdpServer.java
lab1/task3/client/: PythonUdpClient.py
lab1/task3/server/: JavaUdpServer.java
lab1/task4/client-java/: JavaUdpClient.java
lab1/task4/client-python/: PythonUdpClient.py
lab1/task4/server/: PythonUdpServer.py
lab1hw/: client.py  constants.py  server.py
lab2/task1/: polls.py
lab2hw/: constants.py  main.py  weather.py
lab2hw/templates/: error.html  form.html  weather-data.html
lab3/task1/: ray-lab-1-task.py
lab3/task2/: ray-lab-2-objects.py
lab3/task3/: ray-lab-3-actors.py
lab3hw/: main.py  run.py
lab4/Ice/slice/: calculator.ice
lab4/Thrift/: calculator.thrift  optional.thrift
lab4/Thrift/gen-py/optional/: ContactDB-remote  ContactDB.py  __init__.py  ttypes.py
lab4and5hw/A2/: CMakeLists.txt  WeatherServer.java  weather.proto  weather_client.cc  weather_server.cc
lab4and5hw/I4/ICE/: config.client  config.server
lab4and5hw/I4/gRPC/: CMakeLists.txt  WeatherServer.java  weather_client.cc
lab5/gRPC/: calculator.proto  person.proto  person2.ser
lab5/gRPC/src/sr/serialization/: JavaSerialization.java  ProtoSerialization.java
lab6/example1/: Z1_Consumer.java  Z1_Producer.java
lab6/task1a/: Z1_Consumer.java  Z1_Producer.java
lab6/task1b/: Z1_Consumer.java  Z1_Producer.java
lab6/task2/: Z2_Consumer.java  Z2_Producer.java
lab6hw/: Agency.java  Carrier.java  Settings.java
lab7hw/: main.py
(+23 files in other folders)
